--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,6 +46,9 @@ const favicon = preferences.general.favicon;
 const appleTouchIcon = preferences.general["apple-touch-icon"];
 const faviconType = mimetypes[favicon.substring(favicon.lastIndexOf(".") + 1)];
 
+// <link rel="icon" href={favicon} type={faviconType} />
+// <link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon} />
+
 pageWidth && (style["--page-max-width"] = pageWidth + "px");
 headerHeight && (style["--header-height"] = headerHeight + "px");
 ---
@@ -57,8 +60,7 @@ headerHeight && (style["--header-height"] = headerHeight + "px");
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="revision" content={git.long("./")} />
-    <link rel="icon" href={favicon} type={faviconType} />
-    <link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon} />
+
     <link
       rel="stylesheet"
       href="//fast.fonts.net/cssapi/828d1fd7-e4e9-4173-89e6-afe7cda46a8e.css"
