Correctly handle missing snippets.ts

--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -29,16 +29,18 @@ if (ENV_BOOKSHOP_LIVE) {
   md = new MarkdownIt({ html: true });
 } else {
   // Get site specific custom snippets from src/snippets.ts
+  async () => {
+    const { "/src/snippets.ts": promisedSnippets } = await import.meta.glob<
+      Record<string, any>
+    >("/src/snippets.ts");
 
-  const { "/src/snippets.ts": promisedSnippets } = await import.meta.glob<
-    Record<string, any>
-  >("/src/snippets.ts");
+    if (!promisedSnippets) return;
 
-  const snippets = (await promisedSnippets()).snippets;
+    const snippets = (await promisedSnippets()).snippets;
 
-  if (snippets) {
+    if (!snippets) return;
     Object.assign(substitutions, snippets);
-  }
+  };
 }
 ---
 
