--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "@shared/Header.astro";
 import Footer from "@shared/Footer.astro";
-import { ViewTransitions } from "astro:transitions";
+// import { ViewTransitions } from "astro:transitions";
 
 import * as git from "git-rev-sync";
 
@@ -66,7 +66,7 @@ headerHeight && (style["--header-height"] = headerHeight + "px");
       href="//fast.fonts.net/cssapi/828d1fd7-e4e9-4173-89e6-afe7cda46a8e.css"
     />
     <title>{pageTitle}</title>
-    <ViewTransitions />
+    <!-- <ViewTransitions /> -->
   </head>
   <body>
     {show_global_header && <Header {id} {paths} {currentPath} />}
