Add counter snippet

--- a/src/shared/astro/Markdown.astro
+++ b/src/shared/astro/Markdown.astro
@@ -8,6 +8,7 @@ import Icon from "@shared/icon.astro";
 import Mailbuild from "@components/mailbuild/mailbuild.astro";
 import Facebook from "@components/facebook/facebook.astro";
 import Social from "@components/social/social.astro";
+import Counter from "@components/counter/counter.astro";
 
 // We need to strip whitespace due to a strange bug which removes a character from the start of a line when there is whitespace before the newline.
 const content = await stripTrailingWhitespace(Astro.props.content).then(
@@ -21,6 +22,7 @@ var substitutions = {
   Facebook,
   Social,
   'a[class*="button"]': Button,
+  Counter,
 };
 var md;
 
