Disable automatic phone number linking in safari

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,6 +63,8 @@ headerHeight && (style["--header-height"] = headerHeight + "px");
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="revision" content={git.long("./")} />
+    <meta name="format-detection" content="telephone=no" />
+
     <Opengraph {title} {description} />
   </head>
   <body>
