Remove facebook box background

--- a/src/components/facebook/facebook.astro
+++ b/src/components/facebook/facebook.astro
@@ -64,7 +64,7 @@ const embedURL =
 
   .facebox {
     padding: 1rem 2rem 2rem;
-    background-color: rgb(var(--text-color));
+    // background-color: rgb(var(--text-color));
 
     border-radius: var(--border-radius);
     min-width: 340px;
@@ -79,7 +79,8 @@ const embedURL =
     margin-bottom: 1rem;
 
     a {
-      color: rgb(var(--background-color));
+      // color: rgb(var(--background-color), 255 255 255);
+
       display: flex;
       gap: 1em;
       align-items: center;
