--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -175,69 +175,69 @@ select {
   color: rgb(var(--text-color));
 }
 
-table {
+section.richtext table {
   line-height: 1.6;
   font-family: var(--default-font-family);
   font-size: var(--text-size-medium);
   margin-bottom: 2em;
-}
 
-table th {
-  text-align: right;
-  padding-right: 0.5em;
-}
-
-table td {
-  text-align: left;
-  vertical-align: baseline;
-  padding: calc(var(--indent) * 0.1);
-}
-
-@media only screen and (max-width: 768px) {
-  table tbody {
-    display: flex;
-    flex-direction: column;
-    // gap: 1rem;
+  th {
+    text-align: right;
+    padding-right: 0.5em;
   }
-  table tr {
-    display: flex;
-    flex-direction: column;
-    counter-reset: column;
-    border-bottom: 1px solid
-      color-mix(
-        in oklch,
-        rgb(var(--background-color)) 90%,
-        rgb(var(--text-color))
-      );
 
-    &:last-child {
-      border-bottom: 0;
+  td {
+    text-align: left;
+    vertical-align: baseline;
+    padding: calc(var(--indent) * 0.1);
+  }
+
+  @media only screen and (max-width: 768px) {
+    tbody {
+      display: flex;
+      flex-direction: column;
+      // gap: 1rem;
     }
+    tr {
+      display: flex;
+      flex-direction: column;
+      counter-reset: column;
+      border-bottom: 1px solid
+        color-mix(
+          in oklch,
+          rgb(var(--background-color)) 90%,
+          rgb(var(--text-color))
+        );
 
-    td {
-      position: relative;
-      margin-left: 2rem;
-    }
+      &:last-child {
+        border-bottom: 0;
+      }
 
-    td > :is(p, h1, h2, h3, h4, h5, h6):first-child::before,
-    td:not(:has(:is(p, h1, h2, h3, h4, h5, h6):first-child))::before {
-      position: absolute;
-      content: counter(column) ".";
-      counter-increment: column;
-      opacity: 0.5;
-      line-height: inherit;
-      vertical-align: baseline;
-      left: -1.5rem;
+      td {
+        position: relative;
+        margin-left: 2rem;
+      }
+
+      td > :is(p, h1, h2, h3, h4, h5, h6):first-child::before,
+      td:not(:has(:is(p, h1, h2, h3, h4, h5, h6):first-child))::before {
+        position: absolute;
+        content: counter(column) ".";
+        counter-increment: column;
+        opacity: 0.5;
+        line-height: inherit;
+        vertical-align: baseline;
+        left: -1.5rem;
+      }
     }
   }
-}
 
-tr:nth-child(even) {
-  background-color: color-mix(
-    in oklch,
-    rgb(var(--background-color)) 95%,
-    rgb(var(--text-color))
-  );
+  tr:nth-child(even) {
+    background-color: color-mix(
+      in oklch,
+      rgb(var(--background-color)) 95%,
+      rgb(var(--text-color))
+    );
+  }
 }
 
 h1,
