Fix header height

--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -99,8 +99,12 @@ const headerAreas =
       display: none;
     }
 
+    header {
+      height: 0;
+    }
+
     :root {
-      --header-height: 0 !important;
+      --header-height: 0;
     }
   }
 </style>
