--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,10 +32,11 @@
   --article-background-color: var(--page-background-color);
 
   --header-background-color: 0 0 0 / 0.6;
-  --header-background-color-bottom: 0 0 0 / 0;
+  --header-background-color-bottom: 0 0 0 / 0.3;
   --header-color: 255 255 255;
   --header-height: 100px;
-  --header-offset-transparent: var(--header-height);
+  // --header-offset-transparent: var(--header-height);
+  --header-offset-transparent: 0;
 
   --border-radius: 0.3rem;
 
